[package]
name = "mfxvnc"
version = "0.1.0"
authors = ["Yasuhiro Fujii <y-fujii@mimosa-pudica.net>"]
edition = "2018"

[dependencies]
byteorder = "*"
packed_simd = { features = ["into_bits"], package = "packed_simd_2", git = "https://github.com/rust-lang/packed_simd.git" }
rand = "*"
miniz_oxide = "*"
scrap = "*"
libc = "*"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
